syntax = "proto3";

package xmc.srv.core.tsrange;

option go_package = "tsrange";

import "google/protobuf/timestamp.proto";

message TimestampRange {
  google.protobuf.Timestamp begin = 1;
  google.protobuf.Timestamp end = 2;
}
